load("@python//3.8:defs.bzl", py_binary_3_8 = "py_binary", py_test_3_8 = "py_test")
load("@python//3.9:defs.bzl", py_binary_3_9 = "py_binary", py_test_3_9 = "py_test")
load("@python//3.10:defs.bzl", py_binary_3_10 = "py_binary", py_test_3_10 = "py_test")

py_binary(
    name = "version_default",
    main = "version.py",
    srcs = ["version.py"],
)

py_binary_3_8(
    name = "version_3_8",
    main = "version.py",
    srcs = ["version.py"],
)

py_binary_3_9(
    name = "version_3_9",
    main = "version.py",
    srcs = ["version.py"],
)

py_binary_3_10(
    name = "version_3_10",
    main = "version.py",
    srcs = ["version.py"],
)

py_test(
    name = "version_default_test",
    main = "version_test.py",
    srcs = ["version_test.py"],
    env = {"VERSION_CHECK": "3.9"}, # The default defined in the WORKSPACE.
)

py_test_3_8(
    name = "version_3_8_test",
    main = "version_test.py",
    srcs = ["version_test.py"],
    env = {"VERSION_CHECK": "3.8"},
)

py_test_3_9(
    name = "version_3_9_test",
    main = "version_test.py",
    srcs = ["version_test.py"],
    env = {"VERSION_CHECK": "3.9"},
)

py_test_3_10(
    name = "version_3_10_test",
    main = "version_test.py",
    srcs = ["version_test.py"],
    env = {"VERSION_CHECK": "3.10"},
)

py_test(
    name = "version_default_takes_3_10_subprocess_test",
    main = "cross_version_test.py",
    srcs = ["cross_version_test.py"],
    data = [":version_3_10"],
    env = {
        "SUBPROCESS_VERSION_PY_BINARY": "$(rootpath :version_3_10)",
        "SUBPROCESS_VERSION_CHECK": "3.10",
        "VERSION_CHECK": "3.9",
    },
)

py_test_3_10(
    name = "version_3_10_takes_3_9_subprocess_test",
    main = "cross_version_test.py",
    srcs = ["cross_version_test.py"],
    data = [":version_3_9"],
    env = {
        "SUBPROCESS_VERSION_PY_BINARY": "$(rootpath :version_3_9)",
        "SUBPROCESS_VERSION_CHECK": "3.9",
        "VERSION_CHECK": "3.10",
    },
)

sh_test(
    name = "version_test_binary_default",
    srcs = ["version_test.sh"],
    data = [":version_default"],
    env = {
        "VERSION_PY_BINARY": "$(rootpath :version_default)",
        "VERSION_CHECK": "3.9", # The default defined in the WORKSPACE.
    },
)

sh_test(
    name = "version_test_binary_3_8",
    srcs = ["version_test.sh"],
    data = [":version_3_8"],
    env = {
        "VERSION_PY_BINARY": "$(rootpath :version_3_8)",
        "VERSION_CHECK": "3.8",
    },
)

sh_test(
    name = "version_test_binary_3_9",
    srcs = ["version_test.sh"],
    data = [":version_3_9"],
    env = {
        "VERSION_PY_BINARY": "$(rootpath :version_3_9)",
        "VERSION_CHECK": "3.9",
    },
)

sh_test(
    name = "version_test_binary_3_10",
    srcs = ["version_test.sh"],
    data = [":version_3_10"],
    env = {
        "VERSION_PY_BINARY": "$(rootpath :version_3_10)",
        "VERSION_CHECK": "3.10",
    },
)
